# imap-icloud-migration

./: .gitignore  AGENTS.md  LICENSE  README.md  example.env  pyproject.toml
.github/workflows/: ci.yml
src/imap_icloud_migration/: __init__.py  __main__.py
src/imap_icloud_migration/cli/: __init__.py  app.py
src/imap_icloud_migration/config/: __init__.py  settings.py
src/imap_icloud_migration/gmail/: __init__.py  auth.py  client.py  ingest.py  labels.py
src/imap_icloud_migration/imap/: __init__.py  client.py
src/imap_icloud_migration/models/: __init__.py  base.py  state.py  types.py
src/imap_icloud_migration/pipeline/: __init__.py  orchestrator.py
src/imap_icloud_migration/storage/: __init__.py  eml_store.py  state_db.py
src/imap_icloud_migration/utils/: __init__.py  email.py  fingerprint.py  logging.py
tests/: test_eml_store.py  test_fingerprint.py  test_folder_mapping.py  test_imap_list_parse.py  test_message_filter.py  test_state_db.py
